force-app/main/default/objects/Drawdown__c/Drawdown__c.object-meta.xml
<CustomObject>
    <label>Drawdown</label>
    <nameField>
        <displayFormat>D-{00000000}</displayFormat>
        <label>Drawdown</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drawdowns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>