force-app/main/default/objects/Drawdown__c/fields/Accrued_Interest_as_of_Reserve_Date__c.field-meta.xml
<CustomField>
    <fullName>Accrued_Interest_as_of_Reserve_Date__c</fullName>
    <formula>IF (OR( ISPICKVAL(Reference_Notes__c,&quot;Referral Fee&quot;),
ISPICKVAL(Reference_Notes__c,&quot;Refund&quot;),
ISPICKVAL(Reference_Notes__c,&quot;Payment Re-processed&quot;)),0,
IF( ISPICKVAL(Payment_Method__c , &quot;Payment&quot;),0,(Outstanding_Balance_as_of_Reserve_Date__c-Amount_Adjusted_for_Repymt_b4_Reserve_Dt__c)+Interest_up_to_Last_Repymt_b4_Reserve_Dt__c-Interest_Repaid_as_of_Reserve_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accrued Interest as of Reserve Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>