force-app/main/default/objects/Drawdown__c/fields/Accrued_Interest_To_Date_With_Reserve__c.field-meta.xml
<CustomField>
    <fullName>Accrued_Interest_To_Date_With_Reserve__c</fullName>
    <formula>IF(AND(Is_Reserve_Applied__c, Stop_Interest__c, Temp_Payout_Date__c &gt;= Reserve_Date__c), Accrued_Interest_as_of_Reserve_Date__c, Accrued_Interest_as_of_To_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accrued Interest To Date With Reserve</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>