force-app/main/default/objects/Drawdown__c/fields/Admin_Fee_Matches_First_Drawdown_Date__c.field-meta.xml
<CustomField>
    <fullName>Admin_Fee_Matches_First_Drawdown_Date__c</fullName>
    <formula>IF(AND(ISPICKVAL(Payment_Method__c, &apos;Admin Fee&apos;), Date__c != Opportunity__r.Date_of_advance__c) , False, True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Admin Fee Matches First Drawdown Date</label>
    <type>Checkbox</type>
</CustomField>