force-app/main/default/objects/Drawdown__c/fields/Advance_Principal_Repaid__c.field-meta.xml
<CustomField>
    <fullName>Advance_Principal_Repaid__c</fullName>
    <label>Advance Principal Repaid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>