force-app/main/default/objects/Drawdown__c/fields/After_Reserve_Date__c.field-meta.xml
<CustomField>
    <fullName>After_Reserve_Date__c</fullName>
    <formula>Date__c &gt; Reserve_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>After Reserve Date</label>
    <type>Checkbox</type>
</CustomField>