force-app/main/default/objects/Drawdown__c/fields/Amount_Adjusted_for_Repymt_b4_Reserve_Dt__c.field-meta.xml
<CustomField>
    <fullName>Amount_Adjusted_for_Repymt_b4_Reserve_Dt__c</fullName>
    <formula>(Amount__c - Sum_of_Repayments_Before_Reserve_Date__c)+ Interest_up_to_Last_Repymt_b4_Reserve_Dt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Adjusted for Repymt b4 Reserve Dt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>