force-app/main/default/objects/Drawdown__c/fields/Amount_Formula__c.field-meta.xml
<CustomField>
    <fullName>Amount_Formula__c</fullName>
    <formula>IF(
OR(
ISPICKVAL(Reference_Notes__c, &apos;Payment Surplus&apos;) ,
ISPICKVAL(Reference_Notes__c, &apos;Partial Payment&apos;) ,
ISPICKVAL(Reference_Notes__c, &apos;Loan Payout&apos;) ,
ISPICKVAL(Reference_Notes__c, &apos;Bad Debt Recovery&apos;),
ISPICKVAL(Reference_Notes__c, &apos;Payment Shortfall&apos;),
ISPICKVAL(Reference_Notes__c, &apos;Bad Debt&apos;),
ISPICKVAL(Reference_Notes__c, &apos;Payment Rejected&apos;),
ISPICKVAL(Reference_Notes__c, &apos;Payment Halted&apos;)
), (Amount__c * -1) ,Amount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>