force-app/main/default/objects/Drawdown__c/fields/Before_Reserve_Date__c.field-meta.xml
<CustomField>
    <fullName>Before_Reserve_Date__c</fullName>
    <formula>Date__c &lt;= Reserve_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Before Reserve Date</label>
    <type>Checkbox</type>
</CustomField>