force-app/main/default/objects/Drawdown__c/fields/BOM_Fee_Advance__c.field-meta.xml
<CustomField>
    <fullName>BOM_Fee_Advance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BOM Fee Advance</label>
    <referenceTo>Drawdown__c</referenceTo>
    <relationshipLabel>Drawdowns (BOM Fee Advance)</relationshipLabel>
    <relationshipName>Drawdowns</relationshipName>
    <type>Lookup</type>
</CustomField>