force-app/main/default/objects/Drawdown__c/fields/BOM_Fees_Generated__c.field-meta.xml
<CustomField>
    <fullName>BOM_Fees_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BOM Fees Generated</label>
    <type>Checkbox</type>
</CustomField>