force-app/main/default/objects/Drawdown__c/fields/Conga_AR_Summary_Rpt_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Conga_AR_Summary_Rpt_Start_Date__c</fullName>
    <formula>TEXT( YEAR( $Setup.AR_Summary_Report__c.Start_Date__c ) ) &amp; &quot;-&quot; &amp; IF( MONTH( $Setup.AR_Summary_Report__c.Start_Date__c ) &lt; 10, &quot;0&quot;, &quot;&quot; ) &amp; TEXT( MONTH( $Setup.AR_Summary_Report__c.Start_Date__c ) ) &amp; &quot;-&quot; &amp; IF( DAY( $Setup.AR_Summary_Report__c.Start_Date__c ) &lt; 10, &quot;0&quot;, &quot;&quot;) &amp; TEXT( DAY( $Setup.AR_Summary_Report__c.Start_Date__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga AR Summary Rpt Start Date</label>
    <type>Text</type>
</CustomField>