force-app/main/default/objects/Drawdown__c/fields/Conga_Bad_Debt_Recovery_Report_View_All__c.field-meta.xml
<CustomField>
    <fullName>Conga_Bad_Debt_Recovery_Report_View_All__c</fullName>
    <formula>&quot;/apex/APXTConga4__Conga_Composer?SolMgr=1&quot;&amp;
&quot;&amp;serverUrl=&quot;&amp;$Api.Partner_Server_URL_370&amp;
&quot;&amp;Id=&quot;&amp;Id&amp;
&quot;&amp;QueryId=[BadDebtSummaryView]a0pL0000007q7IH&quot; &amp;
&quot;%3Fpv0%3D&quot;&amp;Conga_Bad_Debt_Recovery_Rpt_Start_Date__c &amp;
&quot;~pv1%3D&quot;&amp;Conga_Bad_Debt_Recovery_Rpt_End_Date__c&amp;
&quot;~pv2%3D&quot;&amp; IF($Setup.Bad_Debt_Recovery_Report__c.Business_Unit__c = &apos;&apos;,&apos;ELFI|Rhino|Seahold&apos;, $Setup.Bad_Debt_Recovery_Report__c.Business_Unit__c)&amp;
&quot;~pv3%3D&quot;&amp; $Setup.Bad_Debt_Recovery_Report__c.Type_of_Loan__c &amp;
&quot;&amp;TemplateId=a0xL0000008BUid&amp;DS7=3&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Bad Debt Recovery Report View All</label>
    <type>Text</type>
</CustomField>