force-app/main/default/objects/Drawdown__c/fields/Conga_Finance_Loan_Progression_Print_All__c.field-meta.xml
<CustomField>
    <fullName>Conga_Finance_Loan_Progression_Print_All__c</fullName>
    <formula>&quot;/apex/APXTConga4__Conga_Composer?SolMgr=1&amp;serverUrl=&quot;&amp;$Api.Partner_Server_URL_370&amp;&quot;&amp;Id=&quot;&amp;Id&amp;&quot;&amp;QueryId=[financeloanpprint]a0p19000002LYxr%3Fpv0%3D&quot;&amp;Conga_Finance_Loan_Progression_StartDate__c&amp;&quot;~pv1%3D&quot;&amp;Conga_Finance_Loan_Progression_EndDate__c&amp;&quot;&amp;TemplateId=a0x19000000sR96&amp;DS7=3&quot;</formula>
    <label>Conga Finance Loan Progression Print All</label>
    <type>Text</type>
</CustomField>