force-app/main/default/objects/Drawdown__c/fields/Conga_Finance_Loan_Progression_StartDate__c.field-meta.xml
<CustomField>
    <fullName>Conga_Finance_Loan_Progression_StartDate__c</fullName>
    <formula>TEXT( YEAR( $Setup.FinanceLoanProgression__c.Start_Date__c ) ) &amp; &quot;-&quot; &amp; IF( MONTH( $Setup.FinanceLoanProgression__c.Start_Date__c ) &lt; 10, &quot;0&quot;, &quot;&quot; ) &amp; TEXT( MONTH( $Setup.FinanceLoanProgression__c.Start_Date__c ) ) &amp; &quot;-&quot; &amp; IF( DAY( $Setup.FinanceLoanProgression__c.Start_Date__c ) &lt; 10, &quot;0&quot;, &quot;&quot;) &amp; TEXT( DAY( $Setup.FinanceLoanProgression__c.Start_Date__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Finance Loan Progression StartDate</label>
    <type>Text</type>
</CustomField>