force-app/main/default/objects/Drawdown__c/fields/Conga_Finance_Loan_Progression_View_All__c.field-meta.xml
<CustomField>
    <fullName>Conga_Finance_Loan_Progression_View_All__c</fullName>
    <formula>&quot;/apex/APXTConga4__Conga_Composer?SolMgr=1&quot; 
&amp;&quot;&amp;serverUrl=&quot;&amp;$Api.Partner_Server_URL_370 
&amp;&quot;&amp;Id=&quot;&amp;Id&amp;&quot;&amp;QueryId=[financeloanadv]a0p1F000000xqBHQAY%3Fpv0%3D&quot;&amp;Conga_Finance_Loan_Progression_StartDate__c&amp;&quot;~pv1%3D &quot;&amp; Conga_Finance_Loan_Progression_EndDate__c&amp;&quot;~pv2%3D&quot;&amp;IF(  $Setup.FinanceLoanProgression__c.Business_Unit__c = &#39;Consolidated&#39;,&#39;&#39;,$Setup.FinanceLoanProgression__c.Business_Unit__c)
&amp;&quot;&amp;TemplateId=a0x1F000001Ut4YQAS&quot; 
&amp;&quot;&amp;DS7=3&quot;</formula>
    <label>Conga Finance Loan Progression View All</label>
    <type>Text</type>
</CustomField>