force-app/main/default/objects/Drawdown__c/fields/Conga_Financial_Summary_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Conga_Financial_Summary_Business_Unit__c</fullName>
    <formula>$Setup.Financial_Summary_Report__c.BusinessUnit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Financial Summary Business Unit</label>
    <type>Text</type>
</CustomField>