force-app/main/default/objects/Drawdown__c/fields/Conga_Financial_Summary_Report_Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>Conga_Financial_Summary_Report_Loan_Type__c</fullName>
    <formula>$Setup.Financial_Summary_Report__c.Type_of_Loan__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Financial Summary Report Loan Type</label>
    <type>Text</type>
</CustomField>