force-app/main/default/objects/Drawdown__c/fields/Conga_Financial_Summary_Report_Print_2__c.field-meta.xml
<CustomField>
    <fullName>Conga_Financial_Summary_Report_Print_2__c</fullName>
    <formula>&quot;,[pPaymentElfi]a0p19000002YBE4%3Fpv0%3D&quot; &amp; Conga_Financial_Summary_Rpt_Start_Date__c 
 &amp; &quot;~pv1%3D&quot; &amp; Conga_Financial_Summary_Rpt_End_Date__c 

&amp; &quot;,[pPaymentRhino]a0p19000002OyC5%3Fpv0%3D&quot; &amp; Conga_Financial_Summary_Rpt_Start_Date__c 
 &amp; &quot;~pv1%3D&quot; &amp; Conga_Financial_Summary_Rpt_End_Date__c

&amp; &quot;,[AccruedElfi]a0p19000002KWtW&quot; 

&amp; &quot;,[AccruedRhino]a0p19000002OyCA&quot; 

&amp; &quot;&amp;TemplateId=&quot; &amp;  IF( $Setup.Financial_Summary_Report__c.BusinessUnit__c = &#39;ELFI&#39;,&#39;a0x190000010r5d&#39;,  IF($Setup.Financial_Summary_Report__c.BusinessUnit__c = &#39;Rhino&#39;, &#39;a0x190000013new&#39;, &#39;a0x190000013ner&#39;) ) &amp; &quot;&amp;DS7=3&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Financial Summary Report Print 2</label>
    <type>Text</type>
</CustomField>