force-app/main/default/objects/Drawdown__c/fields/Conga_Financial_Summary_Report_Print_3__c.field-meta.xml
<CustomField>
    <fullName>Conga_Financial_Summary_Report_Print_3__c</fullName>
    <formula>&quot;,[pPayment]a0p0L00000JaYzu%3Fpv0%3D&quot; &amp; Conga_Financial_Summary_Rpt_Start_Date__c 
 &amp; &quot;~pv1%3D&quot; &amp; Conga_Financial_Summary_Rpt_End_Date__c &amp; &quot;~pv2%3D&quot;&amp; $Setup.Financial_Summary_Report__c.Type_of_Loan__c &amp; &quot;~pv3%3D&quot; &amp;  $Setup.Financial_Summary_Report__c.BusinessUnit__c

&amp; &quot;,[Accrued]a0p0L00000Jajk9%3Fpv0%3D&quot; &amp; $Setup.Financial_Summary_Report__c.Type_of_Loan__c &amp; &quot;~pv1%3D&quot; &amp; $Setup.Financial_Summary_Report__c.BusinessUnit__c

&amp; &quot;&amp;TemplateId=a0x0L00000PHA1f&quot; &amp; &quot;&amp;DS7=3&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Financial Summary Report Print 3</label>
    <type>Text</type>
</CustomField>