force-app/main/default/objects/Drawdown__c/fields/Conga_Financial_Summary_Report_Print__c.field-meta.xml
<CustomField>
    <fullName>Conga_Financial_Summary_Report_Print__c</fullName>
    <formula>&quot;/apex/APXTConga4__Conga_Composer?SolMgr=1&quot;
&amp;&quot;&amp;serverUrl=&quot;&amp;$Api.Partner_Server_URL_370
&amp;&quot;&amp;Id=&quot;&amp;Id

&amp;&quot;&amp;QueryId=[reportByProvince]&quot; &amp; IF($Setup.Financial_Summary_Report__c.BusinessUnit__c = &#39;Rhino&#39;,&#39;a0p19000002YAqH&#39;,  IF($Setup.Financial_Summary_Report__c.BusinessUnit__c = &#39;ELFI&#39;, &#39;a0p19000002OyBl&#39;, &#39;a0p19000002OyBq&#39;)) 
 
&amp; &quot;%3Fpv0%3D&quot; &amp; Conga_Financial_Summary_Rpt_Start_Date__c &amp; &quot;~pv1%3D&quot; &amp; Conga_Financial_Summary_Rpt_End_Date__c 

&amp; &quot;,[fAggrElfi]a0p19000002YBDz%3Fpv0%3D&quot; &amp; Conga_Financial_Summary_Rpt_Start_Date__c &amp; &quot;~pv1%3D&quot; &amp; Conga_Financial_Summary_Rpt_End_Date__c 

&amp; &quot;,[fAggrRhino]a0p19000002OyC0%3Fpv0%3D&quot; &amp; Conga_Financial_Summary_Rpt_Start_Date__c &amp; &quot;~pv1%3D&quot; &amp; Conga_Financial_Summary_Rpt_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Financial Summary Report Print</label>
    <type>Text</type>
</CustomField>