force-app/main/default/objects/Drawdown__c/fields/Conga_Financial_Summary_Rpt_Adhoc_Date__c.field-meta.xml
<CustomField>
    <fullName>Conga_Financial_Summary_Rpt_Adhoc_Date__c</fullName>
    <formula>IF(ISNULL($Setup.Financial_Summary_Report__c.Adhoc_as_of_Date__c),
&quot;&quot;,
TEXT( YEAR( $Setup.Financial_Summary_Report__c.Adhoc_as_of_Date__c ) ) &amp; &quot;-&quot; &amp; IF( MONTH( $Setup.Financial_Summary_Report__c.Adhoc_as_of_Date__c ) &lt; 10, &quot;0&quot;, &quot;&quot; ) &amp; TEXT( MONTH( $Setup.Financial_Summary_Report__c.Adhoc_as_of_Date__c ) ) &amp; &quot;-&quot; &amp; IF( DAY( $Setup.Financial_Summary_Report__c.Adhoc_as_of_Date__c ) &lt; 10, &quot;0&quot;, &quot;&quot;) &amp; TEXT( DAY( $Setup.Financial_Summary_Report__c.Adhoc_as_of_Date__c ) )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Financial Summary Rpt Adhoc Date</label>
    <type>Text</type>
</CustomField>