force-app/main/default/objects/Drawdown__c/fields/Conga_Formula_Interest__c.field-meta.xml
<CustomField>
    <fullName>Conga_Formula_Interest__c</fullName>
    <formula>IF( ISPICKVAL(Payment_Method__c, &#39;Payment&#39;) , 
IF( OR(ISPICKVAL(Reference_Notes__c, &#39;Payment Surplus&#39;), ISPICKVAL(Reference_Notes__c, &#39;Payment Shortfall&#39;), ISPICKVAL(Reference_Notes__c, &#39;Bad Debt&#39;)), 0, 
(0 -  Interest_Repaid__c )) 
, Total_Accrued_Interest__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Formula Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>