force-app/main/default/objects/Drawdown__c/fields/Conga_Formula_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Conga_Formula_Outstanding__c</fullName>
    <formula>IF( ISPICKVAL(Payment_Method__c, &apos;Payment&apos;) , 0, Total_Outstanding_Balance__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Formula Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>